# ironclaw

./: .bench-smoke-16core.md  .bench-smoke-micro-13-validate.md  .bench-smoke-micro-pinchbench-13.md  .coderabbit.yaml  .dockerignore  .env.example  .fork-only  .gitattributes  .gitignore  .ironclaw-verify.json  .pr-body.md  .railway-trigger  .sqlfluff  .upstream-baseline  AGENTS.md  BENCHMARK_VALIDATION.md  BRANCHES.md  BRANCH_NOTES.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTEXT.md  CONTRIBUTING.md  COVERAGE_PLAN.md  Cargo.toml  DEBUGGING.md  DOCKER.md  Dockerfile  Dockerfile.process-sandbox  Dockerfile.production  Dockerfile.railway  Dockerfile.reborn  Dockerfile.restart-test  Dockerfile.slim  Dockerfile.test  Dockerfile.worker  Dockerfile.worker.slim  EXTENSIONS.md  FEATURE_PARITY.md  FORK_CONTEXT.md  (+51 more)
benchmarks/: Cargo.toml  Makefile  README.md  config.env  setup-gcp.sh  spot.toml  swe-bench.toml
benchmarks/analysis/: compare.py
benchmarks/approaches/: base.py  container_docker.py  vm_qemu.py
benchmarks/data/: spot.jsonl
benchmarks/runner/: collect.py  orchestrate.py
benchmarks/scenarios/: efficiency.json  error_recovery.json  memory_operations.json  tool_chaining.json  tool_selection.json
benchmarks/src/: agentic.rs  channel.rs  config.rs  error.rs  instrumented_llm.rs  main.rs  results.rs  runner.rs  scoring.rs  suite.rs
benchmarks/vm/: build-image.sh  launch.sh
benchmarks/workload/: agent.py  worker.py
channels-src/matrix/: Cargo.toml  README.md  build.sh  matrix.capabilities.json
channels-src/wecom/: Cargo.toml  build.sh  wecom.capabilities.json
channels-src/whatsapp/: Cargo.toml  build.sh  whatsapp.capabilities.json
crates/ironclaw_agent_loop/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_approvals/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_architecture/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_attestation/: Cargo.toml
crates/ironclaw_attested_runtime/: Cargo.toml
crates/ironclaw_attested_store/: Cargo.toml
crates/ironclaw_auth/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_auth_storage/: Cargo.toml
crates/ironclaw_authorization/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_blueprint_apply/: Cargo.toml
crates/ironclaw_capabilities/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_chain_signing/: Cargo.toml
crates/ironclaw_channel_delivery/: AGENTS.md  Cargo.toml
crates/ironclaw_channel_host/: AGENTS.md  Cargo.toml
crates/ironclaw_common/: AGENTS.md  CHANGELOG.md  Cargo.toml
crates/ironclaw_dispatcher/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_embeddings/: AGENTS.md  Cargo.toml
crates/ironclaw_engine/: AGENTS.md  CLAUDE.md  Cargo.toml  MONTY.md
crates/ironclaw_event_projections/: AGENTS.md  CLAUDE.md  Cargo.toml  PENDING_GATE_PROJECTION.md
crates/ironclaw_event_streams/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_extension_host/: Cargo.toml
crates/ironclaw_extractors/: Cargo.toml
crates/ironclaw_filesystem/: AGENTS.md  CLAUDE.md  Cargo.toml
git-ironclaw-unix-socket-repl-server-repo/: Cargo.toml  README.md  channels_mod.txt  cli_mod.txt  main_imports.txt  main_repl.txt  main_usage.txt  repl.rs  summaryofchanges.txt  unix_socket_repl.rs
git-ironclaw-unix-socket-repl-server-repo/src/: main.rs
langgraph/: README.md  pyproject.toml
langgraph/ironclaw/: __init__.py  app.py  config.py  graph.py  main.py  state.py
langgraph/tests/: test_compaction.py  test_graph.py  test_router.py  test_safety.py  test_scheduler.py  test_tools.py
tools-src/: .gitignore  Cargo.toml  TOOLS.md
tools-src/alipay/: Cargo.toml  alipay-tool.capabilities.json
tools-src/amap/: Cargo.toml  amap-tool.capabilities.json
tools-src/atlas-brain/: Cargo.toml  atlas-brain-tool.capabilities.json
tools-src/atlas-classify/: Cargo.toml  atlas-classify-tool.capabilities.json
tools-src/atlas-notion/: Cargo.toml  atlas-notion-tool.capabilities.json
tools-src/baidu-map/: Cargo.toml  baidu-map-tool.capabilities.json
tools-src/baidu-search/: Cargo.toml  baidu-search-tool.capabilities.json
tools-src/bocha-search/: Cargo.toml  bocha-search-tool.capabilities.json
tools-src/chutes_stt/: Cargo.toml  Manifest.toml
tools-src/chutes_tts/: Cargo.toml  Manifest.toml
tools-src/cn-trending/: Cargo.toml  cn-trending-tool.capabilities.json
tools-src/composio/: Cargo.toml  composio-tool.capabilities.json
tools-src/crew-blocker/: Cargo.toml  crew-blocker-tool.capabilities.json
tools-src/crew-mention/: Cargo.toml  crew-mention-tool.capabilities.json
tools-src/crew-progress/: Cargo.toml  crew-progress-tool.capabilities.json
tools-src/ddg-search/: Cargo.toml  web-search-tool.capabilities.json
tools-src/dingtalk-calendar/: Cargo.toml  dingtalk-calendar-tool.capabilities.json
tools-src/dingtalk-contacts/: Cargo.toml  dingtalk-contacts-tool.capabilities.json
tools-src/dingtalk-doc/: Cargo.toml  dingtalk-doc-tool.capabilities.json
tools-src/dingtalk-robot/: Cargo.toml  dingtalk-robot-tool.capabilities.json
tools-src/dingtalk-todo/: Cargo.toml  dingtalk-todo-tool.capabilities.json
tools-src/feishu-approval/: Cargo.toml  feishu-approval-tool.capabilities.json
tools-src/feishu-calendar/: Cargo.toml  feishu-calendar-tool.capabilities.json
tools-src/feishu-doc/: Cargo.toml  feishu-doc-tool.capabilities.json
tools-src/feishu-msg/: Cargo.toml  feishu-msg-tool.capabilities.json
tools-src/feishu-sheet/: Cargo.toml  feishu-sheet-tool.capabilities.json
tools-src/feishu-task/: Cargo.toml  feishu-task-tool.capabilities.json
tools-src/gitee/: Cargo.toml  gitee-tool.capabilities.json
tools-src/github/: Cargo.toml  README.md  github-tool.capabilities.json  github.capabilities.json
tools-src/github-reborn/: manifest.toml
tools-src/gmail/: Cargo.toml
tools-src/google-calendar/: Cargo.toml
tools-src/google-docs/: Cargo.toml
tools-src/google-drive/: Cargo.toml  google-drive-readonly-tool.capabilities.json
tools-src/google-sheets/: Cargo.toml
tools-src/google-slides/: Cargo.toml
tools-src/gws-bridge/: Cargo.toml  README.md
tools-src/hermes/: Cargo.toml  (+1 more)
(+11581 files in other folders)
