[package]                                                                                                                                                                                           
name = "unix-socket-client-v2"                   
version = "0.2.0"                                                                                                                                                                                   
edition = "2021"  

[dependencies]                                                                                    
tokio = { version = "1.0", features = ["full"] }                                                  
anyhow = "1.0"
