[package]
name = "matrix-channel"
version = "0.1.0"
edition = "2021"
description = "Matrix homeserver channel for IronClaw (skeleton)"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
