[package]
name = "wecom-channel"
version = "0.1.0"
edition = "2021"
description = "WeCom self-built app callback channel for IronClaw"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha1 = "0.10"
aes = "0.8"
cbc = "0.1"
subtle = "2.6"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1

[workspace]
