[package]
name = "ironclaw_agent_loop"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true
description = "Agent-loop framework state and strategy contracts for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
test-support = []

[dependencies]
async-trait = "0.1"
blake3 = "1"
ironclaw_common = { path = "../ironclaw_common", version = "0.4.2" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_observability = { path = "../ironclaw_observability" }
ironclaw_turns = { path = "../ironclaw_turns", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "time"] }
tracing = "0.1"
ironclaw_workspace_hack = { version = "0.1", path = "../ironclaw_workspace_hack" }

[dev-dependencies]
chrono = "0.4"
futures = "0.3"
ironclaw_agent_loop = { path = ".", features = ["test-support"] }
tokio = { version = "1", features = ["macros", "rt"] }
