[package]
name = "ironclaw_auth"
version = "0.1.0"
edition = "2024"
# Keep in sync with the workspace-level package.rust-version.
rust-version.workspace = true
description = "Product-facing Reborn auth contracts and fake services"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.ironclaw]
layer = "substrates"

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ironclaw_common = { path = "../ironclaw_common", version = "0.4.2" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_secrets = { path = "../ironclaw_secrets" }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
subtle = "2"
thiserror = "2"
rand = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"
# Used by the v1-only `loopback_oauth` callback transport to decode OAuth
# callback query parameters. Carried over with the W2.1 fold of the retired
# `ironclaw_oauth` crate into this crate.
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "sync"] }
toml = "1.1"
