[package]
name = "ironclaw_auth"
version = "0.1.0"
edition = "2024"
# Keep in sync with the workspace-level package.rust-version.
rust-version.workspace = true
description = "Product-facing Reborn auth contracts and fake services"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.ironclaw]
layer = "substrates"

[features]
# Compile the panic-on-violation conformance harnesses in `test_support`. Off
# by default so production binaries carry zero bytes of the assertion suites;
# this crate's own tests and downstream crates enable it from
# `[dev-dependencies]`.
test-support = []

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = "0.14"
futures = "0.3"
hex = "0.4.3"
ironclaw_common = { path = "../ironclaw_common", version = "0.4.2" }
ironclaw_events = { path = "../ironclaw_events" }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_secrets = { path = "../ironclaw_secrets" }
ironclaw_turns = { path = "../ironclaw_turns" }
# Compile-time Mozilla Public Suffix List: DCR issuer/resource origin binding
# needs real eTLD+1 resolution (naive label-splitting treats every `*.co.uk`
# as one registrable domain — the PR #6116 security-high finding). Static data
# baked into the binary; no runtime list fetch or I/O.
psl = "2"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
rand = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"
url = "2"
# Used by the v1-only `loopback_oauth` callback transport to decode OAuth
# callback query parameters. Carried over with the W2.1 fold of the retired
# `ironclaw_oauth` crate into this crate.
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
# Self-reference with `test-support` so this crate's own `tests/` integration
# binaries (which link the lib as an external crate, without `cfg(test)`) can
# reach `ironclaw_auth::test_support`.
ironclaw_auth = { path = ".", features = ["test-support"] }
ironclaw_filesystem = { path = "../ironclaw_filesystem", features = ["test-support"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
toml = "1.1"
