[package]
name = "ironclaw_authorization"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.ironclaw]
layer = "kernel"

[features]
# In-memory-backed capability-lease store constructor for this crate's own tests
# and downstream integration tiers. The store itself is the production
# `FilesystemCapabilityLeaseStore<InMemoryBackend>`; the helper just wires the
# in-memory backend seam (arch-simplification §4.3).
test-support = []

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_trust = { path = "../ironclaw_trust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
