[package]
name = "ironclaw_blueprint_apply"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Reconcile a parsed IronClaw blueprint into typed Reborn repos (epic #3036)"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.dist]
dist = false

[dependencies]
ironclaw_blueprint = { path = "../ironclaw_blueprint" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4.3"
thiserror = "2"

[lints]
workspace = true
