[package]
name = "ironclaw_capabilities"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.ironclaw]
layer = "kernel"

[dependencies]
async-trait = "0.1"
ironclaw_authorization = { path = "../ironclaw_authorization" }
ironclaw_extensions = { path = "../ironclaw_extensions" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_processes = { path = "../ironclaw_processes" }
ironclaw_run_state = { path = "../ironclaw_run_state" }
ironclaw_safety = { path = "../ironclaw_safety" }
ironclaw_trust = { path = "../ironclaw_trust" }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
chrono = "0.4"
ironclaw_approvals = { path = "../ironclaw_approvals" }
# Enables the in-memory-backed capability-lease store constructor for tests only.
ironclaw_authorization = { path = "../ironclaw_authorization", features = ["test-support"] }
# Enables the in-memory-backed process store constructors for tests only.
ironclaw_processes = { path = "../ironclaw_processes", features = ["test-support"] }
ironclaw_dispatcher = { path = "../ironclaw_dispatcher" }
ironclaw_events = { path = "../ironclaw_events" }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_resources = { path = "../ironclaw_resources" }
tokio = { version = "1", features = ["macros", "rt"] }
